# vislak

./: Makefile  configure  configure.in  icons.h  icons_data.h  vislak.c  vislak.h  vs_clip.c  vs_clip.h  vs_gui.c  vs_gui.h  vs_midi.c  vs_midi.h  vs_player.c  vs_player.h  vs_project.c  vs_project.h  vs_view.c  vs_view.h
portaudio/: Makefile.in
