# Public domain

PACKAGE("Vislak")
VERSION("1.0-beta")
RELEASE("5l45H! 4TT4CK! 3NT3R! K3Y!")

REGISTER_SECTION("Options specific to Vislak:")
REGISTER("--enable-warnings",	"Suggested compiler warnings [default: no]")

C_DEFINE(_VS_INTERNAL)
C_DEFINE(_BSD_SOURCE)
C_DEFINE(_USE_AGAR_CORE)
C_DEFINE(_USE_AGAR_QUEUE)
C_DEFINE(_USE_AGAR_STD)
C_DEFINE(_USE_AGAR_TYPES)
C_DEFINE(_USE_AGAR_GUI)

# Configure our bundled copy of PortAudio
echo "* Configuring bundled PortAudio..."
(cd portaudio && \
    env CFLAGS="-O2 -g" CXXFLAGS="-O2 -g" \
    ./configure --prefix=$PREFIX --libdir=$PREFIX/lib/vislak)
if [ $? != 0 ]; then
	echo "*"
	echo "* Failed to configure PortAudio"
	echo "*"
	exit 1
fi
echo "* PortAudio configured successfully"

REQUIRE(cc)
REQUIRE(agar, 1.4.1)
REQUIRE(agar-math, 1.4.1)
CHECK(jpeg, 6)
CHECK(alsa)
REQUIRE(sndfile, 0.23)

MDEFINE(LIBDIR, "$PREFIX/lib/vislak")
HDEFINE(LIBDIR, "$PREFIX/lib/vislak")
MDEFINE(SHAREDIR, "$PREFIX/share/vislak")
HDEFINE(SHAREDIR, "$PREFIX/share/vislak")
MDEFINE(MODULEDIR, "$PREFIX/lib/vislak")
HDEFINE(MODULEDIR, "$PREFIX/lib/vislak")

# Set up our include paths.
C_INCDIR($SRC)
C_INCDIR($SRC/portaudio/include)

# Disable improper warnings.
C_NO_SECURE_WARNINGS()

if [ "${enable_warnings}" = "yes" ]; then
	C_OPTION(-Wall)
	C_OPTION(-Werror)
	C_OPTION(-Wno-unused)
	C_OPTION(-Wmissing-prototypes)
fi

# Enable NLS if requested explicitely.
if [ "${enable_nls}" = "yes" ]; then
	CHECK(gettext)
	if [ "${HAVE_GETTEXT}" != "yes" ]; then
		echo "*"
		echo "* --enable-nls was given but gettext was not found. Try"
		echo "* running configure again without this option."
		echo "*"
		exit 1
	fi
fi

echo "*"
echo "* Configuration successful."
echo "* Use make && make install to build and install Vislak."
echo "*"
