# Public domain

PACKAGE("Vislak")
VERSION("1.0-beta")
RELEASE("5l45H! 4TT4CK! 3NT3R! K3Y!")

REGISTER_SECTION("Options specific to Vislak:")
REGISTER("--enable-debug",	"General debugging [no]")
REGISTER("--enable-warnings",	"Suggested compiler warnings [default: no]")
REGISTER("--with-agar[=PREFIX]", "Specify Agar location [default: auto-detect]")
REGISTER("--with-jpeg[=PREFIX]", "Specify libjpeg location [default: auto-detect]")
REGISTER("--with-alsa[=PREFIX]", "Specify ALSA location [default: auto-detect]")
REGISTER("--with-sndfile[=PREFIX]", "Specify libsndfile location [default: auto-detect]")
REGISTER("--with-portaudio[=PREFIX]",	"Use portaudio library [check]")
REGISTER("--with-pthreads[=PREFIX]", "Specify libpthreads location [check]")

C_DEFINE(_VS_INTERNAL)
C_DEFINE(_BSD_SOURCE)
C_DEFINE(_USE_AGAR_CORE)
C_DEFINE(_USE_AGAR_QUEUE)
C_DEFINE(_USE_AGAR_STD)
C_DEFINE(_USE_AGAR_TYPES)
C_DEFINE(_USE_AGAR_GUI)

REQUIRE(cc)
REQUIRE(agar, 1.4.1, ${prefix_agar})
REQUIRE(agar-math, 1.4.1, ${prefix_agar})
CHECK(jpeg, 6, ${prefix_jpeg})
CHECK(alsa, 0, ${prefix_alsa})
REQUIRE(sndfile, 0, ${prefix_sndfile})
CHECK(pthreads, ${prefix_pthreads})
REQUIRE(portaudio, 19.0, ${prefix_portaudio})

MDEFINE(LIBDIR, "$PREFIX/lib/vislak")
HDEFINE(LIBDIR, "$PREFIX/lib/vislak")
MDEFINE(SHAREDIR, "$PREFIX/share/vislak")
HDEFINE(SHAREDIR, "$PREFIX/share/vislak")
MDEFINE(MODULEDIR, "$PREFIX/lib/vislak")
HDEFINE(MODULEDIR, "$PREFIX/lib/vislak")

# Set up our include paths.
C_INCDIR($SRC)

# Disable improper warnings.
C_NO_SECURE_WARNINGS()

if [ "${enable_warnings}" = "yes" ]; then
	C_OPTION(-Wall)
	C_OPTION(-Werror)
	C_OPTION(-Wno-unused)
	C_OPTION(-Wmissing-prototypes)
fi
if [ "${enable_debug}" = "yes" ]; then
	MDEFINE(CFLAGS, "${CFLAGS} -g -DVS_DEBUG")
fi

# Enable NLS if requested explicitely.
if [ "${enable_nls}" = "yes" ]; then
	CHECK(gettext, 0, ${prefix_gettext})
	if [ "${HAVE_GETTEXT}" != "yes" ]; then
		echo "*"
		echo "* --enable-nls was given but gettext was not found. Try"
		echo "* running configure again without this option."
		echo "*"
		exit 1
	fi
fi

echo "*"
echo "* Configuration successful."
echo "* Use make && make install to build and install Vislak."
echo "*"
